@@ -32,12 +32,11 @@ import org.enso.common.ContextFactory;
 import org.enso.common.DebugServerInfo;
 import org.enso.common.HostEnsoUtils;
 import org.enso.common.LanguageInfo;
-import org.enso.common.Platform;
 import org.enso.distribution.DistributionManager;
 import org.enso.distribution.Environment;
 import org.enso.editions.DefaultEdition;
 import org.enso.libraryupload.LibraryUploader.UploadFailedError;
-import org.enso.os.environment.chdir.WorkingDirectory;
+import org.enso.os.environment.jni.JVM;
 import org.enso.pkg.Contact;
 import org.enso.pkg.PackageManager;
 import org.enso.pkg.PackageManager$;
@@ -52,11 +51,11 @@ import org.enso.runner.common.ProfilingConfig;
 import org.enso.runner.common.WrongOption;
 import org.enso.version.BuildVersion;
 import org.enso.version.VersionDescription;
-import org.graalvm.nativeimage.ImageInfo;
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.PolyglotException.StackFrame;
 import org.graalvm.polyglot.SourceSection;
 import org.graalvm.polyglot.io.MessageTransport;
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
 import org.slf4j.event.Level;
@@ -93,6 +92,7 @@ public class Main {
   private static final String NO_READ_IR_CACHES_OPTION = "no-read-ir-caches";
   private static final String DISABLE_PRIVATE_CHECK_OPTION = "disable-private-check";
   private static final String ENABLE_STATIC_ANALYSIS_OPTION = "enable-static-analysis";
+  private static final String TREAT_WARNINGS_AS_ERRORS_OPTION = "Werror";
   private static final String COMPILE_OPTION = "compile";
   private static final String NO_COMPILE_DEPENDENCIES_OPTION = "no-compile-dependencies";
   private static final String NO_GLOBAL_CACHE_OPTION = "no-global-cache";
@@ -110,7 +110,7 @@ public class Main {
 
   private static final String DEFAULT_MAIN_METHOD_NAME = "main";
 
-  private static final org.slf4j.Logger logger = LoggerFactory.getLogger(Main.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(Main.class);
 
   Main() {}
 
@@ -480,6 +480,11 @@ public class Main {
             .longOpt(ENABLE_STATIC_ANALYSIS_OPTION)
             .desc("Enable static analysis (Experimental type inference).")
             .build();
+    var treatWarningsAsErrorsOption =
+        cliOptionBuilder()
+            .option(TREAT_WARNINGS_AS_ERRORS_OPTION)
+            .desc("Treat compiler warnings as errors.")
+            .build();
 
     var systemPropOption =
         cliOptionBuilder()
@@ -541,7 +546,8 @@ public class Main {
         .addOption(warningsLimitOption)
         .addOption(disablePrivateCheckOption)
         .addOption(systemPropOption)
-        .addOption(enableStaticAnalysisOption);
+        .addOption(enableStaticAnalysisOption)
+        .addOption(treatWarningsAsErrorsOption);
 
     return options;
   }
@@ -605,9 +611,9 @@ public class Main {
             : join(new Contact(authorName, authorEmail), nil());
 
     var edition = DefaultEdition.getDefaultEdition();
-    if (logger.isTraceEnabled()) {
+    if (LOGGER.isTraceEnabled()) {
       var baseEdition = edition.parent().getOrElse(() -> "<no-base>");
-      logger.trace("Creating a new project " + name + " based on edition [" + baseEdition + "].");
+      LOGGER.trace("Creating a new project " + name + " based on edition [" + baseEdition + "].");
     }
 
     var template =
@@ -646,23 +652,26 @@ public class Main {
    * @param shouldUseGlobalCache whether or not the compilation result should be written to the
    *     global cache
    * @param shouldUseIrCaches whether or not IR caches should be used.
+   * @param disablePrivateCheck whether or not the private check should be disabled
    * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    * @param logLevel the logging level
    * @param logMasking whether or not log masking is enabled
    */
   private void compile(
+      String cwd,
       String path,
       boolean shouldCompileDependencies,
       boolean shouldUseGlobalCache,
       boolean shouldUseIrCaches,
+      boolean disablePrivateCheck,
       boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors,
       Level logLevel,
       boolean logMasking)
       throws IOException {
-    var fileAndProject = Utils.findFileAndProject(path, null);
-    if (fileAndProject == null) {
-      throw exitFail("No package exists at " + path + ".");
-    }
+    var fileAndProject = Utils.findFileAndProject(cwd, path, null);
+    assert fileAndProject != null;
 
     boolean isProjectMode = fileAndProject._1();
     String projectPath = fileAndProject._3();
@@ -675,7 +684,9 @@ public class Main {
                 .logLevel(logLevel)
                 .logMasking(logMasking)
                 .enableIrCaches(shouldUseIrCaches)
+                .disablePrivateCheck(disablePrivateCheck)
                 .enableStaticAnalysis(enableStaticAnalysis)
+                .treatWarningsAsErrors(treatWarningsAsErrors)
                 .strictErrors(true)
                 .useGlobalIrCacheLocation(shouldUseGlobalCache)
                 .build());
@@ -689,8 +700,17 @@ public class Main {
       }
       throw exitSuccess();
     } catch (Throwable t) {
-      logger.error("Unexpected internal error", t);
-      throw exitFail("Unexpected internal error");
+      boolean compilationFailed =
+          t instanceof PolyglotException polyglotException && polyglotException.isSyntaxError();
+      if (compilationFailed) {
+        var reason = treatWarningsAsErrors ? "warnings or errors" : "errors";
+        throw exitFail("Compilation failed due to " + reason + ".");
+      } else {
+        String message = "Unexpected internal error: " + t.getMessage();
+        LOGGER.error(message, t);
+        throw exitFail(message);
+      }
+
     } finally {
       context.context().close();
     }
@@ -710,11 +730,13 @@ public class Main {
    * @param disablePrivateCheck Is private modules check disabled. If yes, `private` keyword is
    *     ignored.
    * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    * @param inspect shall inspect option be enabled
    * @param executionEnvironment name of the execution environment to use during execution or {@code
    *     null}
    */
   private void handleRun(
+      String cwd,
       String path,
       List<String> additionalArgs,
       String projectPath,
@@ -724,15 +746,14 @@ public class Main {
       boolean disablePrivateCheck,
       boolean enableAutoParallelism,
       boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors,
       boolean enableDebugServer,
       boolean inspect,
       String executionEnvironment,
       int warningsLimit)
       throws IOException {
-    var fileAndProject = Utils.findFileAndProject(path, projectPath);
-    if (fileAndProject == null) {
-      throw exitFail("Cannot find " + path + " and " + projectPath);
-    }
+    var fileAndProject = Utils.findFileAndProject(cwd, path, projectPath);
+    assert fileAndProject != null;
     var projectMode = fileAndProject._1();
     var file = fileAndProject._2();
     var mainFile = file;
@@ -763,6 +784,7 @@ public class Main {
             .strictErrors(true)
             .enableAutoParallelism(enableAutoParallelism)
             .enableStaticAnalysis(enableStaticAnalysis)
+            .treatWarningsAsErrors(treatWarningsAsErrors)
             .executionEnvironment(executionEnvironment != null ? executionEnvironment : "live")
             .warningsLimit(warningsLimit)
             .options(options);
@@ -796,7 +818,7 @@ public class Main {
     } catch (RuntimeException e) {
       // forces computation of the exception message sooner than context is closed
       // should work around issues seen at #11127
-      logger.debug("Execution failed with " + e.getMessage());
+      LOGGER.debug("Execution failed with " + e.getMessage());
       throw e;
     } finally {
       context.context().close();
@@ -816,22 +838,21 @@ public class Main {
    */
   private void genDocs(
       String docsFormat,
+      String cwd,
       String projectPath,
       Level logLevel,
       boolean logMasking,
-      boolean enableIrCaches) {
+      boolean enableIrCaches)
+      throws IOException {
     if (projectPath == null || projectPath.isEmpty()) {
       throw exitFail("Specify path to a project with --in-project option");
     }
-    if (!fileExists(projectPath)) {
+    var fileAndProject = Utils.findFileAndProject(cwd, projectPath, null);
+    if (fileAndProject == null) {
       throw exitFail("Project specified in --in-project option does not exist: " + projectPath);
     }
     generateDocsFrom(docsFormat, projectPath, logLevel, logMasking, enableIrCaches);
     throw exitSuccess();
-  }
-
-  private static boolean fileExists(String path) {
-    return new File(path).exists();
   }
 
   /**
@@ -877,7 +898,7 @@ public class Main {
       DependencyPreinstaller.preinstallDependencies(new File(projectPath), logLevel);
       throw exitSuccess();
     } catch (RuntimeException error) {
-      logger.error("Dependency installation failed: " + error.getMessage(), error);
+      LOGGER.error("Dependency installation failed: " + error.getMessage(), error);
       throw exitFail("Dependency installation failed: " + error.getMessage());
     }
   }
@@ -920,23 +941,18 @@ public class Main {
       } else {
         // Opportunistically parse arguments and convert to ints.
         // This avoids conversions in main function.
-        var parsedArgs =
-            additionalArgs.stream()
-                .map(
-                    arg -> {
-                      try {
-                        return Integer.valueOf(arg);
-                      } catch (NumberFormatException ex) {
-                        return arg;
-                      }
-                    })
-                .toList();
         var listOfArgs = nil();
-        for (var e : parsedArgs) {
+        for (var arg : additionalArgs) {
+          Object e;
+          try {
+            e = Integer.valueOf(arg);
+          } catch (NumberFormatException ex) {
+            e = arg;
+          }
           listOfArgs = join(e, listOfArgs);
         }
         listOfArgs = listOfArgs.reverse();
-        logger.debug("Executing the main function with arguments {}", listOfArgs.mkString(", "));
+        LOGGER.debug("Executing the main function with arguments {}", listOfArgs.mkString(", "));
         var res = main.execute(listOfArgs);
         if (!res.isNull()) {
           var textRes = res.isString() ? res.asString() : res.toString();
@@ -970,13 +986,15 @@ public class Main {
    * @param logMasking is the log masking enabled
    * @param enableIrCaches are IR caches enabled
    * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    */
   private void runRepl(
       String projectPath,
       Level logLevel,
       boolean logMasking,
       boolean enableIrCaches,
-      boolean enableStaticAnalysis) {
+      boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors) {
     var mainMethodName = "internal_repl_entry_point___";
     var dummySourceToTriggerRepl =
         """
@@ -1001,6 +1019,7 @@ public class Main {
                 .enableIrCaches(enableIrCaches)
                 .disableLinting(true)
                 .enableStaticAnalysis(enableStaticAnalysis)
+                .treatWarningsAsErrors(treatWarningsAsErrors)
                 .build());
     var mainModule = context.evalModule(dummySourceToTriggerRepl, replModuleName);
     runMain(mainModule, null, Collections.emptyList(), mainMethodName);
@@ -1018,7 +1037,7 @@ public class Main {
               var repl = futureRepl.get();
               return new DebuggerSessionManagerEndpoint(repl, peer);
             } catch (InterruptedException | ExecutionException ex) {
-              logger.error("Cannot initialize REPL transport", ex);
+              LOGGER.error("Cannot initialize REPL transport", ex);
             }
           }
           return null;
@@ -1078,11 +1097,13 @@ public class Main {
   /**
    * Main entry point for the CLI program.
    *
+   * @param cwd current working directory to use
    * @param line the provided command line arguments
    * @param logLevel the provided log level
    * @param logMasking the flag indicating if the log masking is enabled
    */
-  final void mainEntry(CommandLine line, Level logLevel, boolean logMasking) throws IOException {
+  final void mainEntry(String cwd, CommandLine line, Level logLevel, boolean logMasking)
+      throws IOException {
     if (line.hasOption(HELP_OPTION)) {
       printHelp();
       throw exitSuccess();
@@ -1153,17 +1174,22 @@ public class Main {
       var shouldUseGlobalCache = !line.hasOption(NO_GLOBAL_CACHE_OPTION);
 
       compile(
+          cwd,
           packagePath,
           shouldCompileDependencies,
           shouldUseGlobalCache,
           shouldEnableIrCaches(line),
+          line.hasOption(DISABLE_PRIVATE_CHECK_OPTION),
           line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION),
           logLevel,
           logMasking);
     }
 
+    LOGGER.debug("Original working directory={}, cwd={}", cwd, System.getProperty("user.dir"));
     if (line.hasOption(RUN_OPTION)) {
       handleRun(
+          cwd,
           line.getOptionValue(RUN_OPTION),
           Arrays.asList(line.getArgs()),
           line.getOptionValue(IN_PROJECT_OPTION),
@@ -1173,6 +1199,7 @@ public class Main {
           line.hasOption(DISABLE_PRIVATE_CHECK_OPTION),
           line.hasOption(AUTO_PARALLELISM_OPTION),
           line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION),
           line.hasOption(REPL_OPTION),
           line.hasOption(INSPECT_OPTION),
           line.getOptionValue(EXECUTION_ENVIRONMENT_OPTION),
@@ -1186,11 +1213,13 @@ public class Main {
           logLevel,
           logMasking,
           shouldEnableIrCaches(line),
-          line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION));
+          line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION));
     }
     if (line.hasOption(DOCS_OPTION)) {
       genDocs(
           line.getOptionValue(DOCS_OPTION),
+          cwd,
           line.getOptionValue(IN_PROJECT_OPTION),
           logLevel,
           logMasking,
@@ -1265,7 +1294,7 @@ public class Main {
           try {
             sampler.stop();
           } catch (IOException ex) {
-            logger.error("Error stopping sampler", ex);
+            LOGGER.error("Error stopping sampler", ex);
           }
           return BoxedUnit.UNIT;
         });
@@ -1404,17 +1433,20 @@ public class Main {
   }
 
   private void launchJvm(
-      CommandLine line, Map<String, String> props, File component, String javaPath)
+      CommandLine line, Map<String, String> props, File component, File javaExecutable)
       throws IOException, InterruptedException {
+    var useJNI = true;
     var commandAndArgs = new ArrayList<String>();
-    commandAndArgs.add(javaPath);
-    var jvmOptions = System.getenv("JAVA_OPTS");
-    if (jvmOptions != null) {
-      for (var op : jvmOptions.split(" ")) {
-        if (op.isEmpty()) {
-          continue;
+    if (!useJNI) {
+      commandAndArgs.add(javaExecutable.getPath());
+      var jvmOptions = System.getenv("JAVA_OPTS");
+      if (jvmOptions != null) {
+        for (var op : jvmOptions.split(" ")) {
+          if (op.isEmpty()) {
+            continue;
+          }
+          commandAndArgs.add(op);
         }
-        commandAndArgs.add(op);
       }
     }
     var assertsOn = false;
@@ -1427,14 +1459,26 @@ public class Main {
         commandAndArgs.add("-D" + e.getKey() + "=" + e.getValue());
       }
     }
+    commandAndArgs.add("--sun-misc-unsafe-memory-access=allow");
+    commandAndArgs.add("--enable-native-access=org.graalvm.truffle");
     commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
-    commandAndArgs.add("--module-path");
     if (!component.isDirectory()) {
       throw new IOException("Cannot find " + component + " directory");
     }
-    commandAndArgs.add(component.getPath());
-    commandAndArgs.add("-m");
-    commandAndArgs.add("org.enso.runner/org.enso.runner.Main");
+    JVM jvm;
+    if (useJNI) {
+      commandAndArgs.add("--module-path=" + component.getPath());
+      commandAndArgs.add("-Djdk.module.main=org.enso.runner");
+      var javaHome = javaExecutable.getParentFile().getParentFile();
+      jvm = JVM.create(javaHome, commandAndArgs.toArray(new String[0]));
+      commandAndArgs.clear();
+    } else {
+      commandAndArgs.add("--module-path");
+      commandAndArgs.add(component.getPath());
+      commandAndArgs.add("-m");
+      commandAndArgs.add("org.enso.runner/org.enso.runner.Main");
+      jvm = null;
+    }
     var it = line.iterator();
     while (it.hasNext()) {
       var op = it.next();
@@ -1456,11 +1500,18 @@ public class Main {
       }
     }
     commandAndArgs.addAll(line.getArgList());
-    var pb = new ProcessBuilder();
-    pb.inheritIO();
-    pb.command(commandAndArgs);
-    var p = pb.start();
-    var exitCode = p.waitFor();
+    int exitCode;
+    if (jvm != null) {
+      jvm.executeMain("org/enso/runner/Main", commandAndArgs.toArray(new String[0]));
+      // the above call should never return
+      exitCode = 1;
+    } else {
+      var pb = new ProcessBuilder();
+      pb.inheritIO();
+      pb.command(commandAndArgs);
+      var p = pb.start();
+      exitCode = p.waitFor();
+    }
     if (exitCode == 0) {
       throw exitSuccess();
     } else {
@@ -1471,8 +1522,11 @@ public class Main {
   private void launch(String[] args) throws IOException, InterruptedException, URISyntaxException {
     var line = preprocessArguments(args);
 
-    if (line.hasOption(RUN_OPTION)) {
-      maybeChangeWorkingDirToProjectRoot(line.getOptionValue(RUN_OPTION));
+    String originalCwdOrNull = null;
+    if (line.hasOption(IN_PROJECT_OPTION)) {
+      originalCwdOrNull = Utils.adjustCwdToProject(line.getOptionValue(IN_PROJECT_OPTION));
+    } else if (line.hasOption(RUN_OPTION)) {
+      originalCwdOrNull = Utils.adjustCwdToProject(line.getOptionValue(RUN_OPTION));
     }
 
     var logMasking = new boolean[1];
@@ -1503,16 +1557,15 @@ public class Main {
           var javaExe = JavaFinder.findJavaExecutable();
           if (javaExe == null) {
             // Try your best if `jvm` mode enabled in a project
-            if (!jvmInProjectEnforced) throw exitFail("Cannot find java executable");
+            if (!jvmInProjectEnforced) {
+              throw exitFail("Cannot find java executable");
+            }
           } else {
             launchJvm(line, props, component, javaExe);
           }
         } else {
-          launchJvm(
-              line,
-              props,
-              component,
-              new File(new File(new File(jvm), "bin"), "java").getAbsolutePath());
+          var javaExecutable = new File(new File(new File(jvm), "bin"), "java").getAbsoluteFile();
+          launchJvm(line, props, component, javaExecutable);
         }
       }
     }
@@ -1523,7 +1576,7 @@ public class Main {
       }
     }
 
-    launch(line, logLevel, logMasking[0]);
+    handleLaunch(originalCwdOrNull, line, logLevel, logMasking[0]);
   }
 
   final CommandLine preprocessArguments(String... args) {
@@ -1531,75 +1584,13 @@ public class Main {
     try {
       var startParsing = System.currentTimeMillis();
       var line = parser.parse(CLI_OPTIONS, args);
-      logger.trace(
+      LOGGER.trace(
           "Parsing Language Server arguments took {0}ms",
           System.currentTimeMillis() - startParsing);
       return line;
     } catch (Exception e) {
       printHelp();
       throw exitFail(e.getMessage());
-    }
-  }
-
-  /**
-   * This method has to be called as early as possible. It attempts to find the project root
-   * directory of the given file, and if the project root is found, it uses native code to change
-   * the working directory to the project root. In order for the JVM's {@code java.io} to reflect
-   * the working directory change, this methods must be called before any class from {@code java.io}
-   * is accessed.
-   *
-   * <p>Note that invoking native code is the only reliable way to change the working directory in
-   * the current process.
-   *
-   * <p>For detailed explanation see this <a
-   * href="https://github.com/enso-org/enso/pull/12618#issuecomment-2778451448">GH comment</a>.
-   *
-   * @param fileToRun the file to run, value of the {@code --run} option.
-   */
-  private void maybeChangeWorkingDirToProjectRoot(String fileToRun) {
-    assert fileToRun != null;
-    if (!ImageInfo.inImageRuntimeCode()) {
-      return;
-    }
-    var projectRoot = findProjectRoot(fileToRun);
-    var nativeApi = WorkingDirectory.getInstance();
-    if (projectRoot != null) {
-      var parentDir = parentFile(projectRoot);
-      assert parentDir != null;
-      var curDir = nativeApi.currentWorkingDir();
-      if (!parentDir.equals(curDir)) {
-        var dirChanged = nativeApi.changeWorkingDir(parentDir);
-        if (!dirChanged) {
-          logger.error("Cannot change working directory to {}", parentDir);
-        }
-      }
-    }
-  }
-
-  /**
-   * Attempts to find project root directory. Does not use anything from {@code java.io} on purpose.
-   *
-   * @return null if project root was not found, a canonical path otherwise.
-   */
-  private static String findProjectRoot(String path) {
-    var nativeApi = WorkingDirectory.getInstance();
-    String curPath = path;
-    while (curPath != null) {
-      if (nativeApi.exists(curPath, "package.yaml") && nativeApi.exists(curPath, "src")) {
-        return curPath;
-      }
-      curPath = parentFile(curPath);
-    }
-    return null;
-  }
-
-  private static String parentFile(String path) {
-    var separatorChar = Platform.separatorChar();
-    var lastSlash = path.lastIndexOf(separatorChar);
-    if (lastSlash == -1) {
-      return null;
-    } else {
-      return path.substring(0, lastSlash);
     }
   }
 
@@ -1632,7 +1623,8 @@ public class Main {
     return logLevel;
   }
 
-  private void launch(CommandLine line, Level logLevel, boolean logMasking) {
+  private final void handleLaunch(
+      String cwd, CommandLine line, Level logLevel, boolean logMasking) {
     if (line.hasOption(LANGUAGE_SERVER_OPTION)) {
       try {
         var conf = parseProfilingConfig(line);
@@ -1657,12 +1649,14 @@ public class Main {
               conf,
               ExecutionContext.global(),
               () -> {
-                mainEntry(line, logLevel, logMasking);
+                mainEntry(cwd, line, logLevel, logMasking);
                 return BoxedUnit.UNIT;
               });
+        } catch (ExitCode ex) {
+          throw exitFail(ex.getMessage());
         } catch (IOException ex) {
-          if (logger.isDebugEnabled()) {
-            logger.error("Error during execution", ex);
+          if (LOGGER.isDebugEnabled()) {
+            LOGGER.error("Error during execution", ex);
           }
           throw exitFail("Command failed with an error: " + ex.getMessage());
         }
